@@ -1,3 +1,14 @@
+2012-12-10  Antti Koivisto  <antti@apple.com>
+
+        Not reviewed.
+        
+        Build fix.
+
+        * html/HTMLPropertiesCollection.cpp:
+        (WebCore::nextNodeWithProperty):
+        * page/TouchDisambiguation.cpp:
+        (WebCore::boundingBoxForEventNodes):
+
 2012-12-10  Beth Dakin  <bdakin@apple.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=104602
